web-infras/parser/tests/fixtures/esprima/es2017/trailing-commas/invalid-empty-arrow/output.txt
[SyntaxError]: Unexpect trailing comma. (1,2)
1|(,) => 0;
 |^
